All operations implemented, missing to handle max 9 characters in display

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   font-size: 16px;
   line-height: 1.7;
   color: #fff;
-  background-color: #000;
+  background-color: #c2f30a;
 }
 
 button {
