Implemented crop to 9

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -32,6 +32,15 @@
   transform: translateY(4px) translateX(4px);
 }
 
+.key.pressed {
+  background-color: #f94149;
+  color: #c2f30a;
+  box-shadow: rgba(240, 46, 170, 0.4) 2px 2px, rgba(240, 46, 170, 0.3) 4px 4px,
+    rgba(240, 46, 170, 0.2) 6px 6px, rgba(240, 46, 170, 0.1) 8px 8px,
+    rgba(240, 46, 170, 0.05) 10px 10px;
+  transform: translateY(4px) translateX(4px);
+}
+
 ._function {
 }
 
